# llmention

./: Cargo.toml  README.md
.github/workflows/: release.yml
Formula/: llmention.rb
scripts/: install.ps1
src/: config.rs  lib.rs  parser.rs  report.rs  storage.rs  tracker.rs
src/agent/: optimizer.rs  prompt_discovery.rs  refiner.rs
src/geo/: generator.rs  prompts.rs
src/geo/templates/: discover_prompts.prompt.md  evaluate_improvement.prompt.md
src/marketplace/: builtin.rs  registry.rs
src/providers/: llm_trait.rs  mod.rs  ollama.rs  openai.rs  xai.rs
tauri-app/: index.html
tauri-app/src/: App.tsx
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/src/: main.rs
tauri-app/src/components/: AuditPanel.tsx  OptimizePanel.tsx  ProjectsPanel.tsx
templates/community/rust-crate/: discover.prompt.md  generate.prompt.md
