[workspace]
resolver = "2"
# tauri-app lives in tauri-app/src-tauri/ and manages its own workspace.

[workspace.metadata.dist]
cargo-dist-version = "0.22.0"
ci = ["github"]
installers = ["shell", "powershell"]
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "aarch64-apple-darwin",
    "x86_64-pc-windows-msvc",
]

[package]
name = "llmention"
version = "0.3.0"
edition = "2021"
description = "Local-first GEO agent: track, generate, and optimize your brand's visibility in LLMs"
license = "MIT"
keywords = ["geo", "llm", "visibility", "seo", "cli"]
categories = ["command-line-utilities", "development-tools"]
repository = "https://github.com/wiramahendra/llMention"
homepage = "https://github.com/wiramahendra/llMention"
documentation = "https://github.com/wiramahendra/llMention#readme"
readme = "README.md"

[[bin]]
name = "llmention"
path = "src/bin/llmention.rs"

[lib]
name = "llmention"
path = "src/lib.rs"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Storage
rusqlite = { version = "0.32", features = ["bundled"] }

# Regex
regex = "1"

# Terminal output
comfy-table = "7"
colored = "2"

# Error handling
anyhow = "1"
thiserror = "1"

# Async traits
async-trait = "0.1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Directories (for ~/.llmention)
dirs = "5"

# Hashing (for cache keys)
sha2 = "0.10"
hex = "0.4"
