[workspace]
resolver = "2"

[package]
name = "llmention-app"
version = "0.2.0"
edition = "2021"
description = "LLMention desktop — local-first GEO agent"

[lib]
name = "llmention_app_lib"
crate-type = ["staticlib", "cdylib"]

# The llmention core library (path relative to this Cargo.toml)
[dependencies]
llmention = { path = "../.." }
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
